--- a/sample.tex
+++ b/sample.tex
@@ -9,7 +9,7 @@
 %% njuthesis 文档类的可选参数有：
 %%   winfonts, linuxfonts, macfonts, adobefonts winfonts 选项使得文档使用Windows 系统提供的字体；linuxfonts 选项使得文档使用Linux 系统提供的字体；macfonts 选项使得文档使用Mac 系统提供的字体；adobefonts 选项使得文档使用Adobe提供的OTF中文字体(需自行下载安转)
 %%   phd/master/bachelor 选择博士/硕士/学士论文
-%%   twoside 或 oneside 指定排版的文档为双面打印或单面打印格式（twoside会使得chapter章节从奇数页开始，即纸张的正面开始，因此会出现一些空白的页面）
+%%   twoside 或 oneside 指定排版的文档为双面打印或单面打印格式（twoside会使得chapter 章节从奇数页开始，即纸张的正面开始，因此会出现一些空白的页面）
 %%   nobackinfo 取消封二页导师签名信息。注意，按照南大的规定，是需要签名页的。
 
 
@@ -79,6 +79,8 @@
 \studentnum{xxxxxxx}
 % 论文作者入学年份（年级）
 \grade{2012}
+% 论文作者毕业年份（届）, 出版授权书的学位年度
+\graduateyear{20xx}
 % 导师姓名职称
 \supervisor{某~~教授}
 % 导师的联系电话
