--- a/sample.tex
+++ b/sample.tex
@@ -5,7 +5,7 @@
 %% 作者：njuhan: https://github.com/njuHan
 %% 源模版repo: https://github.com/njuHan/njuthesis-nju-thesis-template
 
-\documentclass[winfonts,bachelor,twoside]{njuthesis}
+\documentclass[winfonts,master,twoside]{njuthesis}
 %% njuthesis 文档类的可选参数有：
 %%   winfonts, linuxfonts, macfonts, adobefonts winfonts 选项使得文档使用Windows 系统提供的字体；linuxfonts 选项使得文档使用Linux 系统提供的字体；macfonts 选项使得文档使用Mac 系统提供的字体；adobefonts 选项使得文档使用Adobe提供的OTF中文字体(需自行下载安转)
 %%   phd/master/bachelor 选择博士/硕士/学士论文
