--- a/sample.tex
+++ b/sample.tex
@@ -213,17 +213,14 @@
 使用.bib文件管理参考文献引用，引用示例：\cite{BHR12}.\par
 \lipsum[1]
 
-\section{Section}\label{subsec:mptcp_conges}
+\section{章节}\label{subsec:mptcp_conges}
 \lipsum[1]
 
-\section{Section}
+\section{章节}
 \lipsum[1]
-
-
 
 
 \section{论文结构}
-
 \lipsum[1]
 \begin{itemize}
 \item 一级item
@@ -240,27 +237,6 @@
 \end{itemize}
 
 
-
-\chapter{相关工作}
-
-\lipsum[1]
-
-\chapter{chapter}
-
-\lipsum[1]
-
-\section{section}\label{sec:rate}
-\lipsum[1]
-\subsection{subsection}
-\lipsum[1]
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.6\linewidth]{./figure/github.jpg}
-  \caption{单图示例}
-  \label{fig:system}
-\end{figure}
-
 \chapter{算法}
 
 \begin{algorithm}[htbp]
@@ -276,6 +252,13 @@
 \end{algorithm}
 
 \chapter{实验验证}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.6\linewidth]{./figure/github.jpg}
+  \caption{单图示例}
+  \label{fig:system}
+\end{figure}
 
 实验硬件设备如图\ref{img:1}所示。
 \begin{figure}[htbp]
@@ -311,9 +294,9 @@
 \label{fig:sub}
 \end{figure}
 
+
 \chapter{总结与展望}
 \lipsum[1]
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -325,8 +308,6 @@
 \end{acknowledgement}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 
 
 % 参考文献。应放在\backmatter之前。
