--- a/sample.tex
+++ b/sample.tex
@@ -5,13 +5,13 @@
 %% 作者：njuhan: https://github.com/njuHan
 %% 源模版repo: https://github.com/njuHan/njuthesis-nju-thesis-template
 
-\documentclass[winfonts,master,twoside]{njuthesis}
+\documentclass[winfonts,master,twoside,AutoFakeBold= {2}]{njuthesis}
 %% njuthesis 文档类的可选参数有：
 %%   winfonts, linuxfonts, macfonts, adobefonts winfonts 选项使得文档使用Windows 系统提供的字体；linuxfonts 选项使得文档使用Linux 系统提供的字体；macfonts 选项使得文档使用Mac 系统提供的字体；adobefonts 选项使得文档使用Adobe提供的OTF中文字体(需自行下载安转)
 %%   phd/master/bachelor 选择博士/硕士/学士论文
 %%   twoside 或 oneside 指定排版的文档为双面打印或单面打印格式（twoside会使得chapter 章节从奇数页开始，即纸张的正面开始，因此会出现一些空白的页面）
 %%   nobackinfo 取消封二页导师签名信息。注意，按照南大的规定，是需要签名页的。
-
+%%   AutoFakeBold 设置CJK字体加粗，参数“2”用于指定加粗程度（空格勿删，删除会引发编译错误）
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -24,7 +24,7 @@
 % 设置论文按照《中国图书资料分类法》的分类编号
 \classification{0175.2}
 % 设置论文按照《国际十进分类法UDC》的分类编号
-% 该编号可在下述网址查询：http://www.udcc.org/udcsummary/php/index.php?lang=chi
+% 该编号可在下述网址查询：https://udcsummary.info/php/index.php?lang=chi
 \udc{004.72}
 % 国家图书馆封面上的论文标题第一行，不可换行。此属性可选，默认值为通过\title设置的标题。
 \nlctitlea{论文标题第一行}
@@ -67,7 +67,7 @@
 % 论文作者电子邮件地址
 \email{sample@smail.nju.edu.cn}
 % 论文作者学生证号
-\studentnum{xxxxxxx}
+\studentnum{xxxxxxxxxx}
 % 论文作者入学年份（年级）
 \grade{2012}
 % 论文作者毕业年份（届）, 出版授权书的学位年度
@@ -300,16 +300,6 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% 致谢，应放在《结论》之后
-\begin{acknowledgement}
-%thanks
-\lipsum[1]
-
-\end{acknowledgement}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 % 参考文献。应放在\backmatter之前。
 % 推荐使用BibTeX，若不使用BibTeX时注释掉下面一句。
 %\nocite{*}
@@ -326,6 +316,16 @@ int main()
 	return 0;
 }
 \end{lstlisting}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 致谢
+\begin{acknowledgement}
+%thanks
+    \lipsum[1]
+
+\end{acknowledgement}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 书籍附件
@@ -358,6 +358,10 @@ int main()
 （课题年限~2010年1月 --- 2012年12月），负责相关问题的研究。
 \end{projects}
 \end{resume}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 生成版权及论文原创性说明
+\statement
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 生成《学位论文出版授权书》页面，应放在最后一页
