--- a/sample.tex
+++ b/sample.tex
@@ -208,36 +208,12 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 学位论文的正文应以《绪论》作为第一章
-\chapter{绪论}\label{chapter_introduction}
-\section{研究背景}
+\chapter{绪论}
+\section{引用参考文献示例}\label{chapter_introduction}
 使用.bib文件管理参考文献引用，引用示例：\cite{BHR12}.\par
-\lipsum[1]
-
-\section{章节}\label{subsec:mptcp_conges}
-\lipsum[1]
-
-\section{章节}
-\lipsum[1]
 
 
-\section{论文结构}
-\lipsum[1]
-\begin{itemize}
-\item 一级item
- \begin{itemize}
- \item 二级item
-	\begin{itemize}
-	\item 三级item
-
-	\end{itemize}
-
- \end{itemize}
-\item 一级item
-
-\end{itemize}
-
-
-\chapter{算法}
+\chapter{算法示例}
 
 \begin{algorithm}[htbp]
   \caption{算法名字}
@@ -251,7 +227,8 @@
   \end{algorithmic}
 \end{algorithm}
 
-\chapter{实验验证}
+
+\chapter{插图示例}
 
 \begin{figure}[htbp]
   \centering
@@ -295,8 +272,6 @@
 \end{figure}
 
 
-\chapter{总结与展望}
-\lipsum[1]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -308,7 +283,7 @@
 
 % 附录，必须放在参考文献后，backmatter前
 \appendix
-\chapter{附录代码}\label{app:1}
+\chapter{附录示例}\label{app:1}
 \section{main函数}
 \begin{lstlisting}[language=C]
 int main()
@@ -321,8 +296,7 @@ int main()
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 致谢
 \begin{acknowledgement}
-%thanks
-    \lipsum[1]
+致谢示例
 
 \end{acknowledgement}
 
